--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@eslint/compat": "^1.2.5",
     "@eslint/js": "^9.18.0",
     "@sveltejs/adapter-auto": "^6.0.0",
+    "@sveltejs/adapter-node": "^5.2.13",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^3.0.0",
+    "express": "^5.1.0",
     "globals": "^16.0.0",
     "mdsvex": "^0.12.6",
     "prettier": "^3.4.2",
