--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
-    "lint": "prettier --check . && eslint ."
+    "lint": "prettier --check . && eslint .",
+    "prod": "vite build && sudo node --env-file-if-exists=./.env server.js" 
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
